# lint-ai

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: release.yml  security-audit.yml
benchmark/: README.md  download_longmemeval_raw.py  python_smoke_benchmark.py  smoke_longmemeval.json
data/lexical/: conceptnet_subset.json  wordnet_subset.json
docs/: artifact-indexing.md  build-corpus-graph.md  chunk-strategy.md  lexical-data.md  show-concepts.md  show-headings.md  tier0-ingestion.md  tier1-hybrid-indexing-and-retrieval.md  tier1-indexing-and-search.md  tier1-light-understanding.md
docs/releases/: 0.1.3.md  0.1.4.md  0.1.5.md  0.1.7.md
scripts/: build_lexical_subsets.py  spacy_ner.py
src/: aggregation.rs  chunking.rs  claim_extractor.rs  cli.rs  config.rs  corpus_graph.rs  engine.rs  filters.rs  graph.rs  ids.rs  index.rs  lib.rs  main.rs  ownership.rs  pipeline.rs  query_expansion.rs  report.rs  review.rs  source.rs  symbols.rs  temporal.rs  temporal_fact.rs  tier1.rs  usage.rs
src/rules/: cross_refs.rs  mod.rs  orphan_pages.rs
tests/: integration.rs
tests/python/: test_index_store.py
