[package]
name = "lint-ai"
version = "0.1.0"
edition = "2021"
description = "Semantic wiki and docs linting for contradictions, stale claims, orphan pages, and missing cross-references"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
regex = "1"
anyhow = "1"
aho-corasick = "1"
