[package]
name = "lint-ai"
version = "0.1.4"
edition = "2021"
description = "Semantic wiki and docs linting for contradictions, stale claims, orphan pages, and missing cross-references"
license = "Apache-2.0"
repository = "https://github.com/RooAGI/Lint-AI"
homepage = "https://www.rooagi.com"
readme = "README.md"
keywords = ["lint", "markdown", "knowledge-base", "AI", "agents"]
categories = ["text-processing", "command-line-utilities"]

[lib]
name = "lint_ai"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
regex = "1"
anyhow = "1"
aho-corasick = "1"
comrak = { version = "0.20", default-features = false }
Inflector = "0.11"
unicode-normalization = "0.1"
deunicode = "1"
petgraph = "0.5"
tantivy = "0.22"
bincode = "1.3"

[dev-dependencies]
lru = "0.16.3"
